created new join game activity and made users unable to join games from home screen